--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,4 @@
-@import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css':
-  root {
+:root {
   font: 16px / 1 sans-serif;
   --header-background: #131959;
   --header-text-color: #e4e1c1;
