--- a/src/index.scss
+++ b/src/index.scss
@@ -100,6 +100,10 @@ button.cell-flag {
   color: green;
 }
 
-button.cell-flag {
+button.cell-free {
   background-color: yellow;
+}
+
+button.cell-number {
+  color: rgb(242, 255, 0);
 }
