Adjusted code to dynamically change class name to display different colors for each number option.

--- a/src/index.scss
+++ b/src/index.scss
@@ -109,3 +109,15 @@ button.cell-free {
 button.cell-number {
   color: rgb(242, 255, 0);
 }
+
+button.cell-1 {
+  color: red;
+}
+
+button.cell-2 {
+  color: magenta;
+}
+
+button.cell-3 {
+  color: orange;
+}
