Updating game difficulty button/function

--- a/src/index.scss
+++ b/src/index.scss
@@ -88,6 +88,7 @@ section.difficulty-2 button {
   height: var(--expert-cell-size);
 }
 
+// This changes the general display of each cell containing a number.
 button.cell-number {
   color: white;
 }
